fix: remove .form-group gaps and wierd background-color mix on rounded corners

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -112,6 +112,9 @@ a {
 .form-group {
   border-radius: vars.$border-radius;
   border: 1px solid vars.$dark-green;
+  background-color: vars.$dark-green;
+  display: flex;
+  flex-direction: column;
 
   :first-child {
     border-radius: 20px 20px 0 0;
